--- a/package.json
+++ b/package.json
@@ -18,18 +18,24 @@
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "font-awesome-loader": "^1.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
+    "path": "^0.12.7",
+    "resolve-url-loader": "^2.2.1",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "chart": "^0.1.2",
     "chart.js": "^2.7.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "path": "^0.12.7"
+    "normalize.css": "^8.0.0",
+    "popper.js": "^1.12.9"
   }
 }
