--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
+    "copy-webpack-plugin": "^4.4.1",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
@@ -32,10 +33,16 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "bootstrap-datepicker": "^1.7.1",
     "chart.js": "^2.7.1",
+    "ckeditor": "^4.8.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "moment": "^2.20.1",
     "normalize.css": "^8.0.0",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "quill": "^1.3.5",
+    "tiny-date-picker": "^3.1.7",
+    "wysiwyg.js": "^2.0.0"
   }
 }
