--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:prod": "webpack -p"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -40,9 +40,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
     "normalize.css": "^8.0.0",
-    "popper.js": "^1.12.9",
-    "quill": "^1.3.5",
-    "tiny-date-picker": "^3.1.7",
-    "wysiwyg.js": "^2.0.0"
+    "popper.js": "^1.12.9"
+
   }
 }
